# virtualGimbal

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.3.2-pre1  CheckerBoardSettings.ini  LICENSE  README.md  TextureFragmentShader.fragmentshader  coeff00.txt  coeff01.txt  coeff02.txt  coeff04.txt  coeff05.txt  coeff06.txt  coeff07.txt  coeff09.txt  coeff11.txt
3dModels/: README.md  virtualGimbal2_microHDMI.step  virtualGimbal2_miniHDMI.step  virtualGimbal_sdcard_rev.4.1.step  virtualGimbal_sdcard_rev.4.2.step  virtualGimbal_sdcard_rev.4.3.step  virtualGimbal_sdcard_stainless_plate_rev.4.3.step
calibration/: distortion.txt  intrinsic.txt
circuit/: PartsList.txt  README.md
circuit/eagle/: eagle.epf  main.brd  main.sch
circuit2/: README.md
circuit_adapter/: adapter.b#1  adapter.b#2  adapter.b#3  adapter.b#4  adapter.b#5  adapter.b#6  adapter.b#7  adapter.b#8  adapter.b#9  adapter.brd  adapter.s#1  adapter.s#2  adapter.s#3  adapter.s#4  adapter.s#5  adapter.s#6  adapter.s#7  adapter.s#8  adapter.s#9  adapter.sch  bom.txt  eagle.epf
circuit_adapter/garber/: adapter.GBL  adapter.GBO  adapter.GBP  adapter.GBS  adapter.GML  adapter.GTL  adapter.GTO  adapter.GTP  adapter.GTS
circuit_hdmi/: README.md  eagle.epf  main.sch
circuit_sdcard/: main.brd  main.sch
circuit_sdcard/eagle/: eagle.epf
circuit_sdcard_rev.4.1/: eagle.epf  main.b#3  main.b#4  main.brd  main.emn  main.emp  main.s#4  main.s#5  main.s#9
circuit_sdcard_rev.4.1/__Previews/: main.schPreview
circuit_sdcard_rev.4.1/garber/: main.GBO  main.GBS  main.GML  main.GTL  main.GTO  main.GTP
circuit_sdcard_rev.4.2/: bom.csv  bom.txt  eagle.epf  main.b#2  main.b#3  main.b#8  main.b#9  main.brd  main.s#1  main.s#6  main.s#8  main.sch
circuit_sdcard_rev.4.2/garber/: main.GBP  main.TXT
circuit_usb/: adapter.brd  adapter.s#1  adapter.s#2  adapter.s#3  adapter.s#5  adapter.sch  eagle.epf
circuit_usb/garber/: adapter.GBL  adapter.GBO  adapter.GBP  adapter.GBS  adapter.GML  adapter.GTL  adapter.GTO  adapter.GTP  adapter.GTS  adapter.TXT
circuit_v2sdcard/: main.s#2
circuit_v3sdcard/: README.md  eagle.epf  main.b#1  main.b#2  main.b#3  main.b#4  main.b#5  main.b#6  main.b#7  main.b#8  main.b#9  main.brd  main.s#1  main.s#2  main.s#3  main.s#4  main.s#5  main.s#7  main.s#8  main.s#9  main.sch
circuit_v3sdcard/garber/: main.GBL  main.GBO  main.GBP  main.GBS  main.GML  main.GTL  main.GTO  main.GTP  main.GTS  main.TXT  pcb_gogo.cam
doc/: angularvelocity.ods  chessboardpattern.pptx  theta.ods
eagle_library/: connector.l#1  connector.l#2  connector.l#3  connector.l#4  connector.l#5  connector.l#6  connector.l#7  connector.l#8  connector.l#9  connector.lbr
firmware/: mpu9250.c
firmware_hdmi/: LICENSE  NAND.c  README.md  main.c  ringBuffer.c  util.c
firmware_hdmi/inc/: mpu9250.h  ringBuffer.h  util.h
firmware_sdcard_rev.4.1/: .cproject  .gitignore  .project  LICENSE  N25Q.c  NAND.c  SPI-NAND.c  Serialize.c  descriptor.c  imported_project_report.html  main.c  mpu9250.c  ringBuffer.c  util.c
firmware_sdcard_rev.4.1/inc/: LED.h  (+5 more)
include/: calcShift.hpp  frequency_domain_optimization.hpp  levenbergMarquardt.hpp  mINIRead.hpp  settings.h  stabilize.h  visualizer.h  vsp.h
post_processing_software/: .gitignore  CMakeLists.txt  CheckerBoardSettings.ini  LICENSE  README.md  chess_board_settings.ini
post_processing_software/calibration/: intrinsic_alpha6500.txt
post_processing_software/camera_descriptions/: cameras.json  cameras_example.json
post_processing_software/cl/: stabilizer_kernel.cl
post_processing_software/common/: texture.cpp
post_processing_software/doc/: chessboardpattern.pptx
post_processing_software/include/: SO3Filters.h  calcShift.hpp  calc_shift.hpp  camera_information.h  cl_manager.h  data_collection.h  distortion.h  inpaint.hpp  inpainting.hpp  json_tools.hpp  levenbergMarquardt.hpp  line_delay_estimator.hpp  mINIRead.hpp  multi_thread_video_writer.h  point_pairs.hpp  ransac.h  rotation_math.h  rotation_param.h  seekablevideocapture.h  settings.h  stabilize.h  video_analyzer.hpp  virtual_gimbal_manager.h  visualizer.h  vsp.h
post_processing_software/include/matplotlib-cpp/: matplotlibcpp.h
post_processing_software/jupyter/: iir_filter_coeff.ipynb  observe_synchronization_and_quality.ipynb  run_vg.ipynb  stabilize_quality_report.ipynb  stabilize_quality_report_before_refine.ipynb  stabilize_quality_report_syukugawara.ipynb  stabilize_quality_report_with_test_data.ipynb  stabilize_quality_reports.ipynb  syncronize.ipynb  visualize_log.ipynb  visualize_rotation_and_translation.ipynb  visualize_sync_table.ipynb
post_processing_software/jupyter/old/: observe_synchronization_and_quality.ipynb  stabilize_quality_report.ipynb.old  stabilize_quality_report_temp.ipynb  stabilize_quality_report_with_syukugawara.ipynb  visualize_rotation_and_translation.ipynb  visualize_sync_table.ipynb
post_processing_software/scripts/: erase_flash_memory.py  generate_angular_velocity_json.py  json_sample.py  make_udev_rules.sh  read_angular_velocity_from_virtualGimbal.py  setup_udev_rules.sh
post_processing_software/src/: SO3Filters.cpp  angular_velocity_estimator.cpp  angular_velocity_reader.cpp  audioedit.cpp  calcShift.cpp  calc_shift.cpp  camera_calibration.cpp  camera_information.cpp  camera_pose_analyzer.cpp  cl_manager.cpp  data_collection.cpp  distortion.cpp  get_optical_flow.cpp  inpainting.cpp  json_tools.cpp  mINIRead.cpp  main.cpp  mainsync.cpp  mainsyncandstabilize.cpp  multi_thread_video_writer.cpp  point_pairs.cpp  ransac.cpp  rapidjson_test.cpp  rolling_shutter_parameter_estimator.cpp  rotation_math.cpp  rotation_param.cpp  seekablevideocapture.cpp  stabilizer_kernel_cpu.cpp  undistortGL.cpp  video_analyzer.cpp  virtual_gimbal_manager.cpp  visualizer.cpp  vsp.cpp
software_post_processing/: CMakeLists.txt
src/: audioedit.cpp  calcShift.cpp  controls.cpp  distortion.cpp  fft_test.cpp  mINIRead.cpp  main.cpp  mainsync.BAK  mainsync.cpp  mainsyncandstabilize.cpp  seekablevideocapture.cpp  texture.cpp  undistortGL.cpp  vectorCorrecter.cpp  visualizer.cpp  vsp.cpp
(+15 files in other folders)
